--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/loktar00/browserify-wot-m8",
   "devDependencies": {
     "browserify": "^5.12.1",
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "gulp-connect": "^2.0.6",
+    "gulp-rename": "^1.2.0",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
