--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-connect": "^2.0.6",
     "gulp-rename": "^1.2.0",
     "vinyl-source-stream": "^1.0.0"
+  },
+  "dependencies": {
+    "date-utils": "^1.2.16"
   }
 }
